--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -14,7 +14,7 @@
         <% if current_user && current_user.admin? %>
         <div class="btn-group" role="group" aria-label="Basic example">
           <%= link_to 'Show', video, type:"button", class:"btn btn-secondary" %>
-          <%= link_to 'Edit', edit_video_path(video), type:"button", class:"btn btn-secondary" %>
+          <%= link_to 'Edit', edit_video_path(video), class:"btn btn-secondary"  %>
           <%= link_to 'Destroy', video, method: :delete, data: { confirm: 'Are you sure?' }, type:"button", class:"btn btn-secondary" %>
         </div>
         <% end %>
