--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,21 @@
 <p id="notice"><%= notice %></p>
   
 <%= form_for([@forum, @forum.comments.build], remote: true) do |form| %>
-<div class="form-group">
-	<%= form.text_area :content, size: "100x5", class: "form-control" %>
-</div>
-	<%= form.submit "Comentar", class: "btn btn-primary" %>
+	<div class="form-group row">
+		<%= form.label :title, "Titulo", class: "col-sm-1 col-form-label" %>
+      <div class="col-sm-5">
+				<%= form.text_field :title, class: "form-control" %>
+      </div>
+      <%= form.label :author, "Autor", class: "col-sm-1 col-form-label" %>
+      <div class="col-sm-5">
+				<%= form.text_field :author, class: "form-control" %>
+      </div>
+  </div>
+  <div class="form-group row">
+		<%= form.text_area :content, size: "100x5", class: "form-control" %>
+  </div>
+	<div class="form-group row">
+		<%= form.submit "Comentar", class: "btn btn-primary" %>
+	</div>
 <% end %>
 <br>
