--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
   
-<%= form_for([@forum, @forum.comments.build], remote: true) do |form| %>
+<%= form_for([@forum, @comment], remote: true) do |form| %>
 	<div class="form-group row">
 		<%= form.label :title, "Titulo", class: "col-sm-1 col-form-label" %>
       <div class="col-sm-5">
@@ -17,17 +17,16 @@
 		    <%= form.text_area :content, size: "100x5", class: "form-control" %>
       </div>
   </div>
-  <% if current_user && current_user.admin? %>
+  
   <div class="form-group row">
     <%= form.label :feedback, "Respuesta", class: "col-sm-1 col-form-label" %>
       <div class="col-sm-11">
 		    <%= form.text_area :feedback, size: "100x5", class: "form-control" %>
       </div>
   </div>
-  <% end %>
 
   <div class="form-group row">
-		<%= form.submit "Comentar", class: "btn btn-primary" %>
+		<%= form.submit "Responder", class: "btn btn-primary" %>
 	</div>
 <% end %>
 <br>
