--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,7 +6,7 @@
     
     <% if comment.feedback? %>
     <div class="media mt-3">
-      <i class="fa fa-commenting-o fa-3x d-flex pr-3 text-success" aria-hidden="true"></i>
+      <i class="fa fa-commenting-o fa-3x d-flex pr-3 text-primary" aria-hidden="true"></i>
       <div class="media-body">
         <h5 class="mt-0">Moderador ACTUEMOS</h5>
         <p><%= comment.feedback %></p>
