--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-  
+<div class="container my-4">    
 <%= form_for([@forum, @comment], remote: true) do |form| %>
 	<div class="form-group row">
 		<%= form.label :title, "Titulo", class: "col-sm-1 col-form-label" %>
@@ -18,15 +17,17 @@
       </div>
   </div>
   
+  <% if current_user && current_user.admin? %>
   <div class="form-group row">
     <%= form.label :feedback, "Respuesta", class: "col-sm-1 col-form-label" %>
       <div class="col-sm-11">
 		    <%= form.text_area :feedback, size: "100x5", class: "form-control" %>
       </div>
   </div>
+  <% end %>
 
   <div class="form-group row">
 		<%= form.submit "Responder", class: "btn btn-primary" %>
 	</div>
 <% end %>
-<br>
+</div>
