--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,7 +12,7 @@
       </div>
   </div>
   <div class="form-group row">
-    <%= form.label :title, "Comentario", class: "col-sm-1 col-form-label" %>
+    <%= form.label :content, "Comentario", class: "col-sm-1 col-form-label" %>
       <div class="col-sm-11">
 		    <%= form.text_area :content, size: "100x5", class: "form-control" %>
       </div>
