--- a/app/views/pages/herramientas.html.erb
+++ b/app/views/pages/herramientas.html.erb
@@ -6,12 +6,19 @@
     </div>    
   </div>
 
-<div class="card-columns">
+<div class="card-group">
   <div class="card">
-    <%= image_tag "arbol-poder.jpg", class:"card-img-top", size:"!60x242" %>
+    <%= image_tag "arbol-poder.jpg", class:"card-img-top" %>
     <div class="card-block">
       <h4 class="card-title">Árbol de Poder - Los mismos de siempre</h4>
       <%= link_to "Descargar", "https://www.dropbox.com/s/qn0alrsxsypurva/mapa-poder.jpg?dl=1", class:"btn btn-primary btn-block" %>
+    </div>
+  </div>
+  <div class="card">
+    <%= image_tag "mapa-embajadas.jpg", class:"card-img-top" %>
+    <div class="card-block">
+      <h4 class="card-title">Mapa de embajadas y consulados</h4>
+      <%= link_to "Descargar", "https://www.dropbox.com/s/viu8hyjys0k0vcc/Mapa%20de%20embajadas%20y%20consulados.pdf?dl=1", class:"btn btn-warning btn-block" %>
     </div>
   </div>
 </div>
