new guia sacar los mismos

--- a/app/views/pages/herramientas.html.erb
+++ b/app/views/pages/herramientas.html.erb
@@ -22,3 +22,9 @@
     </div>
   </div>
 </div>
+<div class="card">
+    <div class="card-block">
+      <h4 class="card-title">Pasos urgentes para sacar a los políticos de siempre</h4>
+      <%= link_to "Descargar", "https://www.dropbox.com/s/m7uf6pklnackzvw/sacar%20los%20mismos.pdf?dl=1", class:"btn btn-danger btn-block" %>
+    </div>
+  </div>
